# pms-ic

./: .env.example  .gitattributes  .gitignore  .mcp.json  =1.8.0  ANALYSIS_PLAN.md  DASHBOARD_RBAC_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIG_README.md  LLM_INDEX.md  LLM_SETUP_GUIDE.md  Makefile  QUICKSTART_LLM.md  README.md  diagnose-chatbot.sh  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.openmetadata.yml  docker-compose.prod.yml  docker-compose.vllm.yml  docker-compose.yml  llm-setup.sh  logs.bat  menu.bat  nul  package.json  restart.bat  start.bat  status.bat  stop.bat  test_new_workflow.sh  test_rag_directly.py  test_scrum_query.sh
llm-service/: .env.example  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.varco  README.md  answer_type_classifier.py  app.py  attempt_tracker.py  authority_classifier.py  batch_varco_ocr.py  benchmark_results.json  benchmark_text2query_accuracy.py  chat_workflow.py  chat_workflow_v2.py  conftest.py  context_snapshot.py  db_query.py  degradation_tips.py  document_parser.py  evidence_service.py  explainability.py  explainability_policy.py  failure_taxonomy.py  hybrid_rag.py  intent_handlers.py  load_ragdata_pdfs_neo4j.py  migrate_access_levels.py  model_gateway.py  openmetadata_integration.py  p4_events.py  p4_metrics.py  pdf_ocr_pipeline.py  pg_neo4j_sync.py  pms_monitoring.py  policy_engine.py  pyproject.toml  rag_service_neo4j.py  report_service.py  requirement_extractor.py  (+41 more)
llm-service/agents/: __init__.py  knowledge_curator_agent.py  orchestrator_agent.py  planner_agent.py  reporter_agent.py  risk_quality_agent.py  scrum_master_agent.py
llm-service/backups/: pms_backup_postgres_20260126_115714_postgres.sql
llm-service/benchmarks/: __init__.py
llm-service/classifiers/: __init__.py  answer_type_classifier.py
llm-service/config/: __init__.py  constants.py  database.py
llm-service/context/: __init__.py
llm-service/contracts/: __init__.py  degradation_tips.py  response_renderer.py  schemas.py  section_templates.py  state.py  status_response_contract.py
llm-service/docs/: DASHBOARD_RELIABILITY_PLAN.md  HALLUCINATION_VERIFICATION_PLAN.md  NORMALIZATION_OPERATIONAL_HARDENING.md  P0_INTENT_ROUTING_HANDLER.md  P1_DATA_QUERY_AND_DEGRADATION.md  P2_QUALITY_ENHANCEMENT.md  P3.5_SELF_HEALING_CLARIFICATION.md  P3_EXPLAINABILITY_SELF_HEALING.md  P4_OBSERVABILITY_DASHBOARD.md  P5_QUERY_NORMALIZATION_LAYER.md  P6_WBS_ENTITY_PROGRESS.md  STATUS_QUERY_IMPLEMENTATION_PLAN.md
llm-service/guards/: __init__.py  contract_check.py  evidence_check.py  json_parse.py  output_guard.py  policy_check.py  source_policy_gate.py
llm-service/integrations/: __init__.py
llm-service/lifecycle/: __init__.py  manager.py
llm-service/mcp/: __init__.py  gateway.py  registry.py
llm-service/migrations/: __init__.py  load_ragdata_pdfs_neo4j.py  neo4j_2025_migration.py  run_sync.py
llm-service/nodes/: __init__.py  analyst_plan.py  architect_outline.py  fast_track.py  guardian_verify.py  light_guardian.py  light_policy_gate.py  retry_bump.py  timing.py
llm-service/observability/: __init__.py  bmad_metrics.py  explainability_policy.py  metrics.py  p4_events.py  p4_metrics.py  state_store.py  tracing.py
llm-service/ocr/: __init__.py  document_parser.py  download_paddle_models.py  pdf_ocr_pipeline.py
llm-service/prompts/: casual_response.txt  out_of_scope.txt  (+1 more)
(+1729 files in other folders)
