[project]
name = "pms-llm-service"
version = "1.0.0"
description = "PMS Insurance Claims - LLM Service with GraphRAG"
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "models",
    "ragdata",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (common in Flask/FastAPI)
    "B904",   # Within an except clause, raise exceptions with raise ... from
    "SIM108", # Use ternary operator (sometimes less readable)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have more relaxed rules
"test_*.py" = ["B011", "F841", "SIM117"]
"*_test.py" = ["B011", "F841", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["config", "services", "routes", "workflows", "agents", "skills", "schemas"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# Exclude directories
exclude = [
    "models/",
    "ragdata/",
]

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "sentence_transformers.*",
    "llama_cpp.*",
    "paddleocr.*",
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "*_test.py",
    "tests/*",
    "models/*",
    "ragdata/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 60
